welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: too many arguments for method baisseBrosse: ()Unit
		baisseBrosse(c)
                            ^MethodsPicture:9: error: too many arguments for method leveBrosse: ()Unit
		leveBrosse(c)
                          ^MethodsPicture:32: error: not found: value yellow
	faireV(yellow)
               ^MethodsPicture:33: error: not found: value red
	faireV(red)
               ^MethodsPicture:34: error: not found: value blue
	faireV(blue)
               ^MethodsPicture:35: error: not found: value green
	faireV(green)
               ^